fix(select): fix the label of the selection input is not centered up and down #INFR-2716

--- a/src/shared/select/select.mixin.scss
+++ b/src/shared/select/select.mixin.scss
@@ -1,6 +1,6 @@
 @use "../../styles/variables";
 
-@mixin select-control-size($input-height, $input-margin-top, $input-margin-bottom, $input-label-height) {
+@mixin select-control-size($input-height, $input-margin-top, $input-margin-bottom) {
     .select-control-rendered {
         margin-top: $input-margin-top;
         .text-placeholder,
